cambio formulario sumar, modificar, eliminar

--- a/site/src/views/products/sumar_producto.ejs
+++ b/site/src/views/products/sumar_producto.ejs
@@ -21,16 +21,19 @@
 
         <form action="/products/crear" method="POST" class="reg__form" enctype="multipart/form-data">
             <input class="reg--input" type= "text" name="nombreProducto" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombreProducto : "" %>" autofocus required>
-            <input class="reg--input" type="text" name="descripProducto" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripProducto : "" %>" autofocus required>
+            <input class="reg--input" type= "text" name="tipo" placeholder="TIPO DEL CERVEZA" value="<%= typeof oldValues != "undefined" ? oldValues.tipo : "" %>" autofocus required>
+            <input class="reg--input" type="textarea" name="descripProducto" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripProducto : "" %>" autofocus required>
             <input class="reg--input" type="number" name="graduacion" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.graduacion : "" %>" autofocus required>
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
             <input class="reg--input" type="number" name="mililitros" value="<%= typeof oldValues != "undefined" ? oldValues.mililitros : "" %>" placeholder="MILILITROS" autofocus required>
-            <input class="reg--input" type="file" name="imagenProducto" placeholder="IMG" value="IMG" autofocus required>
+            <input class="reg--input" type="file" name="imagenProducto" placeholder="IMG" value="<%= typeof oldValues != "undefined" ? oldValues.imagen  : "" %>"  autofocus required>
             <input class="reg--input" type="number" name="precio" placeholder="PRECIO" id="precio" value="<%= typeof oldValues != "undefined" ? oldValues.precio : "" %>"autofocus required>
             
-            <input class="reg--submit" type="submit" value="AGREGAR" autofocus>
-            
+            <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
            
+        </form>
+        <form class="elFormDelete" action="/products/form/<%= typeof oldValues != "undefined" ? oldValues.id : "" %>/borrar?_method=DELETE" method="POST">
+            <input class="reg--submit--eliminar" type="submit" value="ELIMINAR" autofocus>
         </form>
 
     </main>
