--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -1072,7 +1072,8 @@ ojo con este que se usa en varios lados */
     font-size: 1.4rem;
     border: none;
     cursor: pointer;
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-bottom: 5%;
     transition: 0.4s all;
 }
 .reg--submit--eliminar:hover{
@@ -1081,6 +1082,10 @@ ojo con este que se usa en varios lados */
 }
 .reg--submit--eliminar:active{
     color:white;
+}
+
+.elFormDelete{
+    width: 90%;
 }
 
 .registro{
@@ -1625,7 +1630,7 @@ ojo con este que se usa en varios lados */
         margin-top: 10%;
         font-size: 1rem;
         height: 8vh;
-        width: 70%;
+        width: 100%;
     }
     .reg--submit--eliminar{
         font-size: 1rem;
@@ -1817,6 +1822,10 @@ ojo con este que se usa en varios lados */
     
     .ingreso{
         font-size: .8rem;
+    }
+
+    .elFormDelete{
+        width: 40%;
     }
 } 
 
