--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -34,7 +34,7 @@
         <% if (typeof cervezas != 'undefined'){ %> 
             <% cervezas.forEach(element =>{ %> 
             <article class="cont__producto">
-                <img class="producto--img" src="./img/<%= element.nombre %>.jpg" alt="birraA">
+                <img class="producto--img" src="./img/<%= element.imagen %>" alt="birraA">
                 <article class="producto__info">
                     <p><%= element.nombre + ' ' + element.graduacion %></p>
                     <section class="info--precioMl">
