creacion y modificacion de producto

--- a/site/src/views/products/producto.ejs
+++ b/site/src/views/products/producto.ejs
@@ -9,7 +9,7 @@
 
     <section class="bloque__producto">
             <article class="cont__img__producto--pp">
-                <img class="producto--img" src="/img/<%= birra.imagen %>" alt="birraA">
+                <img class="producto--img" src="/img/products/<%= birra.imagen %>" alt="birraA">
             </article>
                 
             <article class="cont__titl__btn__agregar--pp">
