--- a/site/src/views/users/logeoExitoso.ejs
+++ b/site/src/views/users/logeoExitoso.ejs
@@ -8,7 +8,7 @@
     <main class="contenedorMain">
       
         
-        <p class="contenedorMain__links">¡Bienvenido <%= usuarioLogueado %> !</p> 
+        <p class="contenedorMain__links">¡Bienvenido <%= usuarioLogueado.nombre %>!</p> 
         <br>
 
         <button href="index" class="btn--volver">
