--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -34,7 +34,9 @@
         <% if (typeof cervezas != 'undefined'){ %> 
             <% cervezas.forEach(element =>{ %> 
             <article class="cont__producto">
+                <a href="/products/<%= element.nombre %>">
                 <img class="producto--img" src="./img/products/<%= element.imagen %>" alt="birraA">
+                </a>
                 <article class="producto__info">
                     <p><%= element.nombre + ' ' + element.graduacion %></p>
                     <section class="info--precioMl">
