cambie algunos estilos

--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -1709,8 +1709,8 @@ ojo con este que se usa en varios lados */
 
     .descripcion--pp {
         padding-top: 2%;
-        font-size: 0.6rem;
-        text-align: right;
+        font-size: 0.7rem;
+        text-align: left;
         padding-right:5%;
         padding-bottom: 0%;
         width:100%;
