--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -13,11 +13,18 @@
             <a class="linksMenu--a" href="/products">+ producto</a>
             <a class="linksMenu--a" href="/sobre_nosotros">+ sobre nosotros</a>
             <a class="linksMenu--a" href="/faq">+ preguntas frecuentes</a>
+            <% if (usuarioActivo) { %>
+            <a class="linksMenu--a" href="/users/logout">+ logout</a>
+            <% } else { %>
             <a class="linksMenu--a" href="/users/login">+ login</a>
             <a class="linksMenu--a" href="/users/registro">+ registrate</a>
+            <% } %>
             <a class="linksMenu--a" href="/products/carrito">+ carrito</a>
+
             <img class="x_menu" src="/img/laX.svg" alt="laX" onclick="toggleClass()">
         </section>
+
+        
 
         <section class="navBar__contenedor--logo"><a href="/"><img class="logo-navBar" src="/img/LogoA.svg" alt="Logo Digital Birra"></a></section>
         <section class="navBar__faq--carrito">
