--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -22,6 +22,8 @@
                 <input class="log--input" type="email" name="logMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" autofocus>
                 <!-- <label for="logPassword">Password</label> -->
                 <input class="log--input" type="password" name="logPassword" placeholder="PASSWORD" id="logPassword">
+                <label for="recordarme">Recordarme</label>
+                <input type="checkbox" name="recordarme" id="recordarme">
                 <input class="log--submit" type="submit" value="Ingresar">
             </form>    
     </main>
