--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -9,13 +9,13 @@
         </section>
 
         <section class="navBar__linksMenu">
-            <a class="linksMenu--a" href="/">+ home</a>
-            <a class="linksMenu--a" href="/products">+ producto</a>
-            <a class="linksMenu--a" href="/sobre_nosotros">+ sobre nosotros</a>
-            <a class="linksMenu--a" href="/faq">+ preguntas frecuentes</a>
-            <a class="linksMenu--a" href="/users/login">+ login</a>
-            <a class="linksMenu--a" href="/users/registro">+ registrate</a>
-            <a class="linksMenu--a" href="/products/carrito">+ carrito</a>
+            <a class="linksMenu--a home" href="/">+ home</a>
+            <!-- <a class="linksMenu--a producto" href="/products">+ producto</a> -->
+            <a class="linksMenu--a sobre" href="/sobre_nosotros">+ sobre nosotros</a>
+            <a class="linksMenu--a faq" href="/faq">+ preguntas frecuentes</a>
+            <a class="linksMenu--a login" href="/users/login">+ login</a>
+            <a class="linksMenu--a registro" href="/users/registro">+ registrate</a>
+            <a class="linksMenu--a carrito" href="/products/carrito">+ carrito</a>
             <img class="x_menu" src="/img/laX.svg" alt="laX" onclick="toggleClass()">
         </section>
 
