subo logica de perfil, me falta todavia

--- a/site/src/views/users/perfilUsuario.ejs
+++ b/site/src/views/users/perfilUsuario.ejs
@@ -8,7 +8,7 @@
     <main class="contenedorPerfil">
       
         <section class="menuPerfil">
-            <p class="contenedorPerfil__saludo">Hola Usuario!</p> 
+            <p class="contenedorPerfil__saludo">Hola <%= usuarioActivo.nombre +" "+ usuarioActivo.apellido%> !! </p> 
         
         
             <button href="/users/registro" class="btn--volver">
