--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
             <a class="linksMenu--a home" href="/">+ home</a>
             <a class="linksMenu--a sobre" href="/sobre_nosotros">+ sobre nosotros</a>
             <a class="linksMenu--a faq" href="/faq">+ preguntas frecuentes</a>
-            <a class="linksMenu--a login" href=<%=typeof usuarioActivo.nombre != "undefined" ?"/users/perfil" :"/users/login"%>><%= typeof usuarioActivo.nombre != "undefined" ?"+"+" "+ usuarioActivo.nombre +" "+usuarioActivo.apellido :"+ login"%></a>
+            <a class="linksMenu--a login" href=<%=typeof usuarioActivo.nombre != "undefined" ?"/users/perfil" :"/users/login"%>><%= typeof usuarioActivo.nombre != "undefined" ?"+"+" "+ usuarioActivo.nombre +" "+usuarioActivo.apellido :"+ ingresá"%></a>
             <a class="linksMenu--a registro" href=<%=typeof usuarioActivo.nombre != "undefined" ?"/users/logout" :"/users/registro"%>><%= typeof usuarioActivo.nombre != "undefined" ?"+ cerrar sesión" :"+ registrate"%></a>
             <a class="linksMenu--a carrito" href="/products/carrito">+ carrito</a>
             <img class="x_menu" src="/img/laX.svg" alt="laX" onclick="toggleClass()">
