--- a/site/src/views/products/sumar_producto.ejs
+++ b/site/src/views/products/sumar_producto.ejs
@@ -20,18 +20,27 @@
         <% } %> 
 
         <form action="/products/crear" method="POST" class="reg__form" enctype="multipart/form-data">
+            <label for="nombre">Nombre</label>
             <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
+            <label for="tipo">Estilo</label>
             <input class="reg--input" type= "text" name="tipo" placeholder="TIPO DEL CERVEZA" value="<%= typeof oldValues != "undefined" ? oldValues.tipo : "" %>" autofocus required>
+            <label for="descripción">Descripcion</label>
             <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : "" %>" autofocus required>
+            <label for="graduación">Graduacion</label>
             <input class="reg--input" type="number" name="graduacion" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.graduacion : "" %>" autofocus required>
+            <label for="ibu">IBU</label>
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
+            <label for="mililitros">Militros</label>
             <input class="reg--input" type="number" name="mililitros" value="<%= typeof oldValues != "undefined" ? oldValues.mililitros : "" %>" placeholder="MILILITROS" autofocus required>
+            <label for="Imagen">Imagen</label>
             <input class="reg--input" type="file" name="imagen" placeholder="IMG">
+            <label for="categoria">Categoria</label>
             <select class="reg--input" name="categoria" id="">
                 <option class="select--option" value="" disabled selected>"<%= typeof oldValues != "undefined" ? oldValues.categoria : "CATEGORÍA" %>"</option>
                 <option value="mas-vendidas">más-vendidas</option>
                 <option value="estandar">estándar</option>
             </select>
+            <label for="precio">Precio</label>
             <input class="reg--input" type="number" name="precio" placeholder="PRECIO" id="precio" value="<%= typeof oldValues != "undefined" ? oldValues.precio : "" %>"autofocus required>
             
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
