--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -18,12 +18,18 @@
                 <% } %> 
 
             <form action="/users/loguear" method="POST" class="cont__form">
-                <!-- <label for="logMail">Mail</label> -->
-                <input class="log--input" type="email" name="logMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" autofocus>
-                <!-- <label for="logPassword">Password</label> -->
-                <input class="log--input" type="password" name="logPassword" placeholder="PASSWORD" id="logPassword">
-                <label for="recordarme">Recordarme</label>
-                <input type="checkbox" name="recordarme" id="recordarme">
+                
+                    <label for="logMail">Mail</label>
+                    <input class="log--input" type="email" name="logMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" autofocus>
+                
+               
+                    <label for="logPassword">Password</label>
+                    <input class="log--input" type="password" name="logPassword" placeholder="PASSWORD" id="logPassword">
+                
+                <section class="recuerdame">
+                    <label for="recordarme">Recordarme</label>
+                    <input type="checkbox" name="recordarme" id="recordarme">
+                </section>
                 <input class="log--submit" type="submit" value="Ingresar">
             </form>    
     </main>
