--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -21,10 +21,15 @@
         <% } %> 
 
             <form action="/users/registrar" method="POST" class="reg__form">
+                <label for="regNombre">Nombre</label>
                 <input class="reg--input" type= "text" name="regNombre" placeholder="NOMBRE" id="regNombre" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.nombre :(typeof oldValues != "undefined" ? oldValues.regNombre : "") %>" autofocus required>
+                <label for="regApellido">Apellido</label>
                 <input class="reg--input" type="text" name="regApellido" placeholder="APELLIDO" id="regApellido" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.apellido : (typeof oldValues != "undefined" ? oldValues.regApellido : "") %>" autofocus required>
+                <label for="regMail">Mail</label>
                 <input class="reg--input" type="email" name="regMail" placeholder="doncerveza@dbirra.com.ar" id="logMail" value="<%= typeof usuarioActivo.nombre != "undefined" ? usuarioActivo.email :(typeof oldValues != "undefined" ? oldValues.regMail : "") %>" autofocus required>
+                <label for="regPassword">Contraseña</label>
                 <input class="reg--input" type="password" name="regPassword" placeholder="PASSWORD" id="regPassword"  autofocus required>
+                <label for="regConfPassword">Repite Contraseña</label>
                 <input class="reg--input" type="password" name="regConfPassword" placeholder="CONFIRMÁ PASSWORD" id="regConfPassword"  autofocus required>
                 
                 <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
