arreglo css preindex

--- a/site/src/views/preindex.ejs
+++ b/site/src/views/preindex.ejs
@@ -73,15 +73,14 @@
 
 </svg>
 	
-	<!-- <a href="index"><p class="ingreso">Ingresar al sitio</p></a> -->
-	<section class="intro--respuesta">
-		<form action="/preindex" method="POST">
+	
+		<form class="formSoyMayor" action="/preindex" method="POST">
 			<label class="titl__preindex" for="soyMayor"> 
 				<p class="soyMayor--par">soy mayor de 18</p> 
 			</label>
 			<input onChange="this.form.submit()" class="soyMayor--input" value="true" type="checkbox" name="soyMayor" id="soyMayor">
 		</form>
-	</section> 
+
 	
 </section>
 <script src="js/preindex.js"></script>
