--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -110,17 +110,35 @@ html {
     opacity: .7;
 }
 
+.formSoyMayor{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 10vh;
+    align-items: center;
+    justify-content: center;
+}
+
 .soyMayor--input{
     all: unset;
+    /* height: 10%; */
     appearance: none;
     border: 1% solid #cacece;
     padding: 4%;
     opacity: .7;
 	border-radius: 3%;
     background-color: #86C232;
-    transform: scale(2);
+    transform: scale(1);
+    position: absolute;
+    right: 19%;
+    bottom: 27%;
     cursor: pointer;
+    transition: .2s all;
     /* display: none; */
+}
+
+.soyMayor--input:hover{
+    background-color: white;
 }
 
 .soyMayor--input:active, .soyMayor--input:checked:active {
@@ -141,7 +159,6 @@ html {
 	bottom: -15%;
 	color: #46853a;
 }
-
 
 
 .cont__intro--logo:active >.st1{
@@ -167,11 +184,13 @@ html {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding-bottom: 4%;
+    /* padding-bottom: 4%; */
     transition: .7s;
+    position: absolute;
+    left: 12%;
     cursor: pointer;
     opacity: .7;
-    width: 80%;
+    width: 60%;
 }
 
 .titl__preindex:hover{
@@ -179,9 +198,9 @@ html {
     color:#86C232;
 }
 
-.titl__preindex > *{
+/* .titl__preindex > *{
     margin-bottom: 10%;
-}
+} */
 
 .laX--intro{
     width: 20%;
@@ -1336,6 +1355,7 @@ ojo con este que se usa en varios lados */
 
 }
 
+
 @media (min-width: 900px){
 
     /* ESTILOS RESPONSIVE DE NAVBAR */
@@ -1846,34 +1866,43 @@ ojo con este que se usa en varios lados */
     .intro--respuesta{
         position: relative;
         flex-direction: row;
+        width: 60%;
     }
 
     .titl__preindex{
-        font-size: .8rem;
+        font-size: 1rem;
         width: 54%;
+        position: absolute;
+        left: 15%;
     }
     
-    .laX--intro{
+    /* .laX--intro{
         width: 10%;
+    } */
+
+
+    .formSoyMayor {
+    width: 50%;
+    height: 10vh;
     }
 
-    .soyMayor--par{
+    /* .soyMayor--par{
         position: absolute;
         top: 27%;
         left: 35%;
-    }
+    } */
 
     .soyMayor--input{
         position: absolute;
-        right: 34%;
-        top: -12%;
+        top: 2%;
+        right: 27%;
         padding: 4%;
         transform: scale(.5);
         /* display: none; */
     }
-    .titl__preindex > * {
+    /* .titl__preindex > * {
         margin-bottom: 2%;
-    }
+    } */
     
     .ingreso{
         font-size: .8rem;
