--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
             <a class="linksMenu--a faq" href="/faq">+ preguntas frecuentes</a>
             <a class="linksMenu--a login" href=<%=typeof usuarioActivo.nombre != "undefined" ?"/users/perfil" :"/users/login"%>><%= typeof usuarioActivo.nombre != "undefined" ?"+"+" "+ usuarioActivo.nombre +" "+usuarioActivo.apellido :"+ ingresá"%></a>
             <% if(usuarioAdmin){%>
-                <a class="linksMenu--a" href="/products/form"> + formulario</a>
+                <a class="linksMenu--a" href="/products/form"> + crear producto</a>
             <%}%>
             <a class="linksMenu--a registro" href=<%=typeof usuarioActivo.nombre != "undefined" ?"/users/logout" :"/users/registro"%>><%= typeof usuarioActivo.nombre != "undefined" ?"+ cerrar sesión" :"+ registrate"%></a>
             <a class="linksMenu--a carrito" href="/products/carrito">+ carrito</a>
