--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -24,11 +24,11 @@
                 
                
                     <label for="logPassword">Password</label>
-                    <input class="log--input" type="password" name="logPassword" placeholder="PASSWORD" id="logPassword">
+                    <input class="log--input" type="password" name="logPassword" placeholder="******" id="logPassword">
                 
                 <section class="recuerdame">
                     <label for="recordarme">Recordarme</label>
-                    <input type="checkbox" name="recordarme" id="recordarme">
+                    <input type="checkbox" name="recordarme" id="recordarme" class="checkbox--recordarme">
                 </section>
                 <input class="log--submit" type="submit" value="Ingresar">
             </form>    
