--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -1099,9 +1099,10 @@ ojo con este que se usa en varios lados */
     font-size: 1.4rem;
     border: none;
     cursor: pointer;
-    margin-top: 5%;
+    margin-top: 10%;
     margin-bottom: 5%;
     transition: 0.4s all;
+    
 }
 .reg--submit--eliminar:hover{
     color:tomato;
@@ -1703,7 +1704,7 @@ ojo con este que se usa en varios lados */
     .reg--submit--eliminar{
         font-size: 1rem;
         height: 8vh;
-
+        width: 65%;
     }
 
     .buscadorModif{
