--- a/site/src/views/users/logeoExitoso.ejs
+++ b/site/src/views/users/logeoExitoso.ejs
@@ -13,7 +13,7 @@
         <% if(usuarioAdmin){%>
         <button href="index" class="btn--volver">
             <a class="volverInicio" href="/products/form">Crear,modificar,borrar</a>
-        </button></a>
+        </button>
         <%}%>
         <button href="index" class="btn--volver">
             <a class="volverInicio" href="/">Volver al inicio</a>
