options roja a index

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -19,6 +19,7 @@
                 <option class="select--option" value="ipa">IPA</option>
                 <option class="select--option" value="rubia">Rubia</option>
                 <option class="select--option" value="negra">Negra</option>
+                <option class="select--option" value="roja">Roja</option>
             </select>
            
             <input type="submit" name="eleccion" value="mas-vendidas" class="btn--vent"></input>
