--- a/site/src/views/faq.ejs
+++ b/site/src/views/faq.ejs
@@ -10,15 +10,15 @@
      <article class="cont__faq">
         <h2 class="titl">preguntas frecuentes</h2>
         <section>    
-            <p class="parrafo">
+            <p class="preguntasFAQ">
             ¿Cómo comprar?
             </p>
-            <p class="parrafo">
+            <p class="parrafoFAQ">
             Paso 1:
-            Elegís lo que querés
+            Elegís lo que querés.
             Es muy fácil.
             Para cargar los productos en tu carrito hacé click en el botón
-            que dice “Agregar” , que aparece debajo de cada uno. Para
+            que dice “Agregar” que aparece debajo de cada uno. Para
             eliminar productos de tu carrito, podes hacerlo clickeando en
             “borrar” que figura al lado del detalle de compra. Para
             cambiar las cantidades del producto elegido, hacelo
@@ -27,22 +27,16 @@
             todos los que desees, clickeá en “Finalizar compra” para
             avanzar en tu pedido.
             </p>
-            <p class="parrafo">
-            Paso 2:
-            ¿Tengo que registrarme para realizar una compra?
+            <p class="preguntasFAQ">
+            ¿Tengo que registrarme para realizar una compra?</p>
+            <p class="parrafoFAQ">
             Sí, para realizar una compra es necesario que estés
             registrado. Podés hacerlo una vez que ya hayas llenado tu
             carrito!
-            Simplemente tenés que completar los siguientes datos:
-            <ul class="parrafo">
-                <li>-Nombre</li>
-                <li>-Apellido</li>
-                <li>-Mail</li>
-                <li>-Contraseña</li>
-            </ul>
             </p>
         </section>
      </article> 
+     
         <section class="cont__btn--volver">
         <button class="btn--volver">
             <a href="/">Volver al inicio</a>
