--- a/site/src/views/products/producto.ejs
+++ b/site/src/views/products/producto.ejs
@@ -5,7 +5,7 @@
 <section class="contenedorApp">
     <%-include('./partials/header.ejs')%>
 
-    <main class="contenedorMain">
+    <main class="contenedorMainProducto">
 
     <section class="bloque__producto">
             <article class="cont__img__producto--pp">
