--- a/site/src/views/users/registroExitoso.ejs
+++ b/site/src/views/users/registroExitoso.ejs
@@ -11,15 +11,13 @@
         <p class="contenedorMain__links">¡Registro exitoso!</p> 
         <br>
 
+        <button href="/users/login" class="btn--volver">
+            <a class="volverInicio" href="/users/login">Ingresar</a>
+        </button></a>
+
         <button href="index" class="btn--volver">
             <a class="volverInicio" href="/">Volver al inicio</a>
-        </button></a>
-
-        <button href="/users/login" class="btn--volver">
-            <a class="volverInicio" href="/users/login">Loguearme</a>
-        </button></a>
-
-            
+        </button></a>            
 
     </main>
     
