--- a/site/src/views/faq.ejs
+++ b/site/src/views/faq.ejs
@@ -6,7 +6,7 @@
 
     <%-include('./partials/header.ejs')%>
 
-    <main class="contenedorMain">
+    <main class="contenedorMainFAQ">
      <article class="cont__faq">
         <h2 class="titl">preguntas frecuentes</h2>
         <section>    
@@ -39,7 +39,7 @@
      
         <section class="cont__btn--volver">
         <button class="btn--volver">
-            <a href="/">Volver al inicio</a>
+            <a class="volverInicio" href="/">Volver al inicio</a>
         </button>
         </section>
     </main>
