cambie estilos faq y sobre nosotros

--- a/site/public/css/styles.css
+++ b/site/public/css/styles.css
@@ -974,6 +974,7 @@ ojo con este que se usa en varios lados */
     font-family: 'Industry';
     font-size: 2rem;
     padding: 2%;
+    margin-top: 5%;
 }
 
 .parrafo{
