--- a/site/src/views/faq.ejs
+++ b/site/src/views/faq.ejs
@@ -8,7 +8,7 @@
 
     <main class="contenedorMainFAQ">
      <article class="cont__faq">
-        <h2 class="titl">preguntas frecuentes</h2>
+        <h2 class="titlG">preguntas frecuentes</h2>
         <section>    
             <p class="preguntasFAQ">
             ¿Cómo comprar?
