subo modif de perfil (no esta terminado todavia)

--- a/site/src/views/users/perfilUsuario.ejs
+++ b/site/src/views/users/perfilUsuario.ejs
@@ -11,9 +11,9 @@
             <p class="contenedorPerfil__saludo">Hola <%= usuarioActivo.nombre +" "+ usuarioActivo.apellido%> !! </p> 
         
         
-            <button href="/users/registro" class="btn--volver">
-                <a class="volverInicio" href="/users/registro">Editar perfil</a>
-            </button></a>
+            <button href="/users/modifUsuario" class="btn--volver">
+                <a class="volverInicio" href="/users/modifUsuario">Editar perfil</a>
+            </button>
 
             <button href="index" class="btn--volver">
                 <a class="volverInicio" href="/">Volver al inicio</a>
