--- a/site/src/views/products/producto.ejs
+++ b/site/src/views/products/producto.ejs
@@ -14,8 +14,10 @@
                 
             <article class="cont__titl__btn__agregar--pp">
                 <article class="producto__titl--pp">
-                    <p class="nombre--ppp-<%=birra.tipo%>"><%= birra.nombre%>
+                    <section class="color_estilo-<%=birra.tipo%>"></section>
+                    <p class="nombre--ppp"><%= birra.nombre%>
                     </p>
+                    
                     <article class="detalle_birra">
                     <p class="nombre--pp"><%=birra.tipo%>
                     </p>
