--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -15,6 +15,7 @@
             <form class="formFiltroHome" action="/" method="POST">
             <section class="cont__select__venTodas"> 
             <select onchange="this.form.submit()" class="select--tcerveza" name="tipoCerveza">
+                <!-- hacer select dinamico -->
                 <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
                 <option class="select--option" value="ipa">IPA</option>
                 <option class="select--option" value="rubia">Rubia</option>
