--- a/src/views/products/borraste.ejs
+++ b/src/views/products/borraste.ejs
@@ -6,7 +6,7 @@
     <%-include('./partials/header.ejs')%>
 
     <main class="contenedorMain">
-      <p>Borraste <%= exproducto.nombre + ' ' + exproducto.mililitros  %> </p> 
+      <p>Borraste <%= birraBorrar.nombre + ' ' + birraBorrar.tamano  %> </p> 
 
     </main>
     
