logueo con sequel

--- a/src/views/users/logeoExitoso.ejs
+++ b/src/views/users/logeoExitoso.ejs
@@ -8,7 +8,7 @@
     <main class="contenedorMain">
       
         
-        <p class="contenedorMain__links">¡Bienvenido <%= usuarioLogueado.nombre %>!</p> 
+        <p class="contenedorMain__links">¡Bienvenido <%= usuarioActivo.nombre %>!</p> 
         <br>
         <% if(usuarioAdmin){%>
         <button href="index" class="btn--volver">
